applications/tekton-pipelines/manifests/03-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tekton.mrcontainer.nl
      secretName: tekton-dashboard-tls
  rules:
    - host: tekton.mrcontainer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
