applications/tekton-pipelines/manifests/04-dashboard-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard-tailscale
  namespace: tekton-pipelines
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - tekton-dashboard
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
