applications/tekton-pipelines/manifests/14-event-listener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-webhook
  namespace: tekton-pipelines
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tekton-webhook.mrcontainer.nl
      secretName: tekton-webhook-tls
  rules:
    - host: tekton-webhook.mrcontainer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-flowfin-webhook
                port:
                  number: 8080
